#11215 - 카테고리 옵션 off시 카테고리 리스트 안 보이게 수정

--- a/src/main/resources/public/template/board/boardView.html
+++ b/src/main/resources/public/template/board/boardView.html
@@ -104,21 +104,23 @@
     </div>
 </div>
 </body>
-<th:block layout:fragment="pageScript">
-    <script th:inline="javascript">
-        /*<![CDATA[ */
-        window.onload = function () {
-            OverlayScrollbars(document.querySelector('.z-page-content'), {className: 'scrollbar'});
-            OverlayScrollbars(document.querySelectorAll('.textarea-scroll-wrapper'), {
-                className: 'scrollbar',
-                textarea: {
-                    dynHeight: false,
-                    dynWidth: false,
-                    inheritedAttrs: "class"
-                }
-            })
-        };
-        /* ]]> */
-    </script>
-</th:block>
+<script layout:fragment="pageScript" th:inline="javascript">
+    /*<![CDATA[ */
+    let categoryYn = /*[[${boardAdmin?.categoryYn}]]*/;
+    window.onload = function () {
+        OverlayScrollbars(document.querySelector('.z-page-content'), {className: 'scrollbar'});
+        OverlayScrollbars(document.querySelectorAll('.textarea-scroll-wrapper'), {
+            className: 'scrollbar',
+            textarea: {
+                dynHeight: false,
+                dynWidth: false,
+                inheritedAttrs: "class"
+            }
+        })
+        if (!categoryYn && categoryYn !== null) {
+            document.getElementById('category-detail').style.display = 'none';
+        }
+    };
+    /* ]]> */
+</script>
 </html>
