--- a/src/main/resources/public/template/auth/authEdit.html
+++ b/src/main/resources/public/template/auth/authEdit.html
@@ -74,9 +74,10 @@
                     th:onclick="|javascript:onSave('post')|" th:text="#{common.btn.register}"></button>
             <button sec:authorize="hasAuthority('auth.update')"
                     class="z-button primary" th:if="${auth?.authId}" type="button" id="btnUpdate" name="btnUpdate"
-                    th:onclick="|javascript:onSave('put')|" th:text="#{common.btn.modify}"></button>
+                    th:onclick="|javascript:onSave('put')|"
+                    th:text="#{common.btn.modify}"></button>
             <button sec:authorize="hasAuthority('auth.delete')"
-                    class="z-button secondary" type="button" id="btnDelete" name="btnDelete"
+                    class="z-button secondary" th:if="${auth?.authId}" type="button" id="btnDelete" name="btnDelete"
                     th:onclick="|javascript:aliceAlert.confirm(i18n.msg('common.msg.confirmDelete'), onDelete)|"
                     th:text="#{common.btn.delete}"></button>
         </div>
