#111274 - 사용자 정의 차트 목록 보기 권한만 있는 사용자도 차트이름의 목록 출력
* 팀장님의 답변을 확인하고, 차트 이름에 부여된 권한을 삭제 하여 권한이 없는 사용자도 차트 이름 클릭 시, 차트를 볼 수 있게 하였음.

--- a/src/main/resources/public/template/chart/chartList.html
+++ b/src/main/resources/public/template/chart/chartList.html
@@ -22,11 +22,9 @@
         </tr>
         <tr class="flex-row align-items-center" th:unless="${#arrays.isEmpty(chartList)}" th:each="chart: ${chartList}">
             <td style="width: 15%;" class="align-left" th:text="#{|chart.${chart.chartType}|}"></td>
-            <td style="width: 15%;" class="align-left underline pointer">
-                <span sec:authorize="hasAuthority('chart.create') || hasAuthority('chart.update')"
-                 th:onclick="openChartViewModal([[${chart.chartId}]], [[${chart.chartType}]], [[${chart.chartName}]])"
-                      th:text="${chart.chartName}"></span>
-            </td>
+            <td style="width: 15%;" class="align-left underline pointer"
+                th:onclick="openChartViewModal([[${chart.chartId}]], [[${chart.chartType}]], [[${chart.chartName}]])"
+                      th:text="${chart.chartName}">
             <td style="width: 25%;" class="align-left" th:text="${chart.chartDesc}"></td>
             <td style="width: 10%;" class="align-center">
                 <button type="button" class="z-button-icon form" sec:authorize="hasAuthority('chart.create') || hasAuthority('chart.update')"
