--- a/src/main/resources/public/template/cmdb/ci/ciViewModal.html
+++ b/src/main/resources/public/template/cmdb/ci/ciViewModal.html
@@ -69,10 +69,7 @@
                 <input type="text" id="ciTags" class="z-input col-pct-12 inherit" th:value="${ciData?.ciTags}" readonly/>
             </div>
             <!-- 세부속성 -->
-            <div class="flex-column view-row">
-                <h3 class="sub-title under-bar bold mt-4" th:text="#{cmdb.attribute.label.details}"></h3>
-            </div>
-            <div id="ciAttributes" th:onclick="zCmdbAttribute.drawViewDetails(this, [[${ciData?.classes}]], [[${userInfo}]]);">
+            <div class="flex-column view-row" id="ciAttributes" th:onclick="zCmdbAttribute.drawViewDetails(this, [[${ciData?.classes}]], [[${userInfo}]]);">
             </div>
         </div>
     </div>
