#11158 CI 조회화면의 태그가 이상하다 -> 일감 관련 분석 및 수정 진행

--- a/src/main/resources/public/template/cmdb/ci/ciSearch.html
+++ b/src/main/resources/public/template/cmdb/ci/ciSearch.html
@@ -60,7 +60,7 @@
         restSubmit('get', '/cmdb/cis?' + aliceJs.serialize(document.getElementById('searchFrm')) + '&pageNum=' + pageNum);
         let ciListTags = document.querySelectorAll('input[name=ciListTags]');
         let ciIdList= (document.querySelectorAll('input[name=ciId]'));
-        for (let i = loopOffSet; i < ciListTags.length; i++) {
+        for (let i = 0; i < ciListTags.length; i++) {
             new zTag(ciListTags[i], {
                 suggestion: false,
                 realtime: false,
