#11280 - [커스텀 코드] 커드텀코드내 조건내 Boolean형 대소문자 구분없이 처리되도록하는것이 좋아보인다.
* js코드 분석 결과 사용자 사용여부(use_yn)에서 입력받는 input태그(let conditionValue)를 발견하였다. input태그의 입력 받은 값이 true인지 false인지 비교하는 if문에서  입력값에 .toLowerCase()를 붙여 전부 소문자로 바꾸어 비교를 하게 하였다.

--- a/src/main/resources/public/template/custom-code/customCodeEdit.html
+++ b/src/main/resources/public/template/custom-code/customCodeEdit.html
@@ -340,7 +340,7 @@
                         let conditionOperator = childNodes[i].getElementsByTagName('select')[1].value;
                         let conditionValue = childNodes[i].getElementsByTagName('input')[0].value;
                         if (conditionKey === 'use_yn') {
-                            if (conditionValue === 'true' || conditionValue === 'false') {
+                            if (conditionValue.toLowerCase() === 'true' || conditionValue.toLowerCase() === 'false') {
                                 conditionObj.conditionKey = conditionKey;
                                 conditionObj.conditionOperator = conditionOperator;
                                 conditionObj.conditionValue = conditionValue;
