--- a/src/main/resources/public/scss/document/_variables.scss
+++ b/src/main/resources/public/scss/document/_variables.scss
@@ -80,6 +80,11 @@ $cmdb-ci-relation-select-group-padding:      0.6875rem 0 0.6875rem 0; // 11px 0 
 $cmdb-ci-target-select-box-width:            30.5rem; // 488px
 $cmdb-ci-relation-select-box-width:          21.8125rem; // 349px
 
+$cmdb-ci-child-attribute-border-color:       $gray300;
+$cmdb-ci-child-attribute-border-width:       0.0625rem; // 1px
+$cmdb-ci-child-attribute-bg-color:           $white;
+$cmdb-ci-child-attribute-border-radius:      0.0625rem; // 1px
+
 ///////////////////////////// Tree ////////////////////////////////
 $tree-modal-width:                           40rem; // 640px
 $tree-modal-height:                          44.19rem; // 707px
