--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -484,6 +484,22 @@ input, button, select, optgroup, textarea {
   padding-left: 1.5625rem;
 }
 
+.pt-6 {
+  padding-top: 1.875rem;
+}
+
+.pr-6 {
+  padding-right: 1.875rem;
+}
+
+.pb-6 {
+  padding-bottom: 1.875rem;
+}
+
+.pl-6 {
+  padding-left: 1.875rem;
+}
+
 .m-0 {
   margin: 0;
 }
@@ -570,6 +586,22 @@ input, button, select, optgroup, textarea {
 
 .ml-5 {
   margin-left: 1.5625rem;
+}
+
+.mt-6 {
+  margin-top: 1.875rem;
+}
+
+.mr-6 {
+  margin-right: 1.875rem;
+}
+
+.mb-6 {
+  margin-bottom: 1.875rem;
+}
+
+.ml-6 {
+  margin-left: 1.875rem;
 }
 
 .mt-auto {
@@ -7673,5 +7705,3 @@ body.modal-active {
   position: absolute;
   right: 3.75rem;
 }
-
-/*# sourceMappingURL=itsm.css.map */
