--- a/src/main/resources/public/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/scss/theme/default/_layout.scss
@@ -81,6 +81,40 @@
 
       // view
       @include commonViewTemplate();
+
+      .z-page-view {
+        // CMDB CI
+        // 세부 속성
+        .attribute-group {
+          background-color: $cmdb-ci-attribute-bg-color;
+          padding: 0 1.25rem 1.25rem 1.25rem; // 0px 20px 20px 20px
+          @include border($cmdb-ci-attribute-border-width, solid, $cmdb-ci-attribute-border-color, all);
+          @include borderRadius($cmdb-ci-attribute-border-radius);
+          margin-bottom: 0.625rem; // 10px
+
+          // Group List일 경우, 하위 속성 존재함
+          .child-attribute-group {
+            @include relative();
+            padding-top: 0.625rem; // 10px
+
+            .z-button-attribute-add {
+              @include absolute($top: -1.875rem, $right: 0); //-30px 0
+            }
+
+            .child-attribute-row {
+              background-color: $cmdb-ci-child-attribute-bg-color;
+              padding: 0.3125rem 1.25rem 1.25rem 1.25rem; // 5px 20px 20px 20px
+              @include border($cmdb-ci-child-attribute-border-width, solid, $cmdb-ci-child-attribute-border-color, all);
+              @include borderRadius($cmdb-ci-child-attribute-border-radius);
+              margin-top: 0.625rem; // 10px
+
+              .z-button-attribute-delete {
+                @include absolute($right: 0.3125rem); //5px
+              }
+            }
+          }
+        }
+      }
     }
 
     // 리스트
