--- a/src/main/resources/public/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/scss/theme/default/_variables.scss
@@ -247,14 +247,16 @@ $vertical-bar-width:                          1.25rem; // 20px
 $vertical-bar-height:                         1.25rem; // 20px
 $vertical-bar-margin:                         0.0625rem 0.9375rem 0.0625rem 0; // 1px 5px 1px 0
 
-//////////////////////////// CI 모달 /////////////////////////
-$cmdb-ci-modal-width:                         62.5rem; // 1000px
-$cmdb-ci-modal-height:                        53.0625rem; // 849px
-
+//////////////////////////// CI 조회 /////////////////////////
 $cmdb-ci-attribute-border-color:              $gray300;
 $cmdb-ci-attribute-border-width:              0.0625rem;
 $cmdb-ci-attribute-bg-color:                  $neutral50;
 $cmdb-ci-attribute-border-radius:             0.0625rem; // 1px
+
+$cmdb-ci-child-attribute-border-color:       $gray300;
+$cmdb-ci-child-attribute-border-width:       0.0625rem; // 1px
+$cmdb-ci-child-attribute-bg-color:           $white;
+$cmdb-ci-child-attribute-border-radius:      0.0625rem; // 1px
 
 //////////////////////////// 스케줄러 모달 /////////////////////////
 $scheduler-modal-width:                       62.5rem; // 1000px
