--- a/src/main/resources/public/template/cmdb/ci/ciView.html
+++ b/src/main/resources/public/template/cmdb/ci/ciView.html
@@ -7,6 +7,7 @@
     <title th:text="#{cmdb.ci.label.ciInquiry}"></title>
 </head>
 <th:block layout:fragment="pageHead">
+    <script th:src="@{/assets/js/workflow/zWorkflowUtil.js}"></script>
     <script th:src="@{/assets/js/cmdb/zCmdbAttribute.js}"></script>
 </th:block>
 <div layout:fragment="pageTitle">
