#11284 - [코드] 보기 권한만 있을경우 코드화면이 동작되지않는다
해당 일감에서의 오류는 발견되지 않았으나 , onEdit()함수에서 if (CODE_DELETE)가 중복으로 선언되어 등록버튼의 style.display 값을 찾을 수 없다는 오류 발생.
중복된 if문 중 하나의 if문을 if(CODE_CREATE)로 변경하여 정상출력 확인

--- a/src/main/resources/public/template/code/codeEdit.html
+++ b/src/main/resources/public/template/code/codeEdit.html
@@ -261,7 +261,7 @@
         if (CODE_DELETE) {
             document.querySelector('#btnDelete').style.display = 'block';
         }
-        if (CODE_DELETE) {
+        if (CODE_CREATE) {
             document.querySelector('#btnRegist').style.display = 'none';
         }
     }
