#10193 조회 조건 태그 적용 1. CI 조회 tag 검색 기능 추가

--- a/src/main/resources/public/scss/template/_tag.scss
+++ b/src/main/resources/public/scss/template/_tag.scss
@@ -19,7 +19,8 @@
 
 .tagify {
   @include relative();
-  display: flex;
+  display: inline-flex;
+  width: 100%;
   min-height: 2.25rem; // 36px
   align-items: flex-start;
   flex-wrap: wrap;
