--- a/src/main/resources/public/template/cmdb/ci/ciView.html
+++ b/src/main/resources/public/template/cmdb/ci/ciView.html
@@ -11,7 +11,7 @@
 </th:block>
 <div layout:fragment="pageTitle">
     <h1 th:text="#{cmdb.ci.label.ciInquiry}"></h1>
-    <h6 class="description ml-2 pl-2" th:text="#{cmdb.ci.msg.searchDescription}"></h6>
+    <h6 class="description ml-2 pl-2" th:text="#{cmdb.ci.msg.viewDescription}"></h6>
 </div>
 <div layout:fragment="pageView">
     <input type="hidden" id="ciId" th:value="${ciData?.ciId}"/>
