--- a/src/main/resources/public/template/token/tokenSearch.html
+++ b/src/main/resources/public/template/token/tokenSearch.html
@@ -29,7 +29,7 @@
         <input type="text" class="z-input i-date-picker search-date col-3" id="searchFromDt" name="searchFromDt"/>
         <input type="text" class="z-input i-date-picker search-date col-3" id="toDt" name="toDt"/>
         <input type="hidden" class="search-date col-2" id="searchToDt" name="searchToDt" readonly="readonly"/>
-        <input  type="text" class="z-input i-search col-3 mr-2" id="searchTagString" name="searchTags"
+        <input  type="text" class="z-input i-search col-3 mr-2" id="searchTag" name="searchTag"
                 maxlength="100" th:placeholder="#{token.label.tagPlaceHolder}"/>
         <span id="spanTotalCount" class="search-count"></span>
     </form>
@@ -64,13 +64,15 @@
 
         document.getElementById('searchValue').addEventListener('keyup', () => {tokenSearch(false);}, false);
 
-        // 태그 조회가 아직 미완성이기 때문에 임시적으로 엔터로 변경한다.
-        document.getElementById('searchTagString').addEventListener('keyup', (e) => {
-            if (e.key === 'Enter') {
-                e.preventDefault();
+        new zTag(document.getElementById('searchTag'), {
+            suggestion: true,
+            realtime: false,
+            tagType: 'instance',
+            targetId: '',
+            callback: function () {
                 tokenSearch(false);
             }
-        }, false);
+        });
 
         tokenSearch(false);
     };
