MR 수정 1. conditionDto 의 nullable을 "" 을 기본값으로 변경 2. css 파일 추가

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -7125,7 +7125,8 @@ body.modal-active {
 }
 .tagify {
   position: relative;
-  display: flex;
+  display: inline-flex;
+  width: 100%;
   min-height: 2.25rem;
   align-items: flex-start;
   flex-wrap: wrap;
